# Game_Of_Life

./: README.md  bitbucket_pipeline.yml  bitbucket_pipelines.yml
.github/workflows/: MainCI.yml  ccpp.yml  mainCI.yml
final/console/: drawer.c
final/game/: game.c  game.h
final_version/CMakeList/: CMakeLists.txt  ctest.c  main.c  main_sdl.c
final_version/CMakeList/game_sdl/: game_sdl.c  game_sdl.h
final_version/makeFile/: Makefile
final_version/makeFile/grids/: grid4.txt
final_version/makeFile/inc/: drawer.h
final_version/makeFile/src/: ctest.c  game.c  main.c  main_sdl.c
step1/: Makefile  README.md  ansi.h  doxygen  drawer.c  drawer.h  error.txt  game.c  game.h  gameOfLife  main  main.c
step2/: Makefile  ansi.h  doxygen  drawer.c  drawer.h  error.txt  game.c  game.h  gameOfLife  main.c
step2/console/: drawer.c  drawer.h
step2/game/: game.c  game.h
step3/: ansi.h  drawer.c  drawer.h  game.c  game.h  gameOfLife  main.c
step3/console/: drawer.h
step3/game/: game.c  game.h
step4/: CMakeLists.txt  Doxyfile  Makefile  cunit_test.c  drawer.c  drawer.h  game.c  game.h  gameOfLife  main.c  main_sdl.c
step4/game_sdl/: game_sdl.c
step4/inc/: game_sdl.h
step4/src/: game_sdl.c  main_sdl.c
step5/: ctest.c  main_sdl.c
step5 (final_version)/: CMakeLists.txt
